
[v1.1.1p6d]
 - API: If GlassedPane creates a tooltip it calls the "createTooltip" method of the JComponent where the mouse hovers over. Clients can set a custom strategy called "ToolbarStrategy" to manage tooltips.
 - Bugfix: When changing the layout (setting of a DockFrontend), protected root stations were unregistered. They should have been unaffected by the change.
 
[v1.1.1p6e]
 - API: ButtonDropDownHandler and related classes can now handle a "null" component as view. This allows an action to show up on a drop down button even if it does not show up in its menu.
 - API: New enum "IconHandling". If a client sets a null icon at a DefaultDockable, DefaultSingleCDockable or DefaultMultipleCDockable the icon is not shown. If the client does not set an icon, the default icon is shown. The IconHandling allows clients to specify exactly whether "null" means "no icon" or "default icon".  
 - Bugfix: MenuMenuHandler now also supports a "null" component as view, keeping the behavior consistent with ButtonDropDownHandler. 
 - Bugfix: CFlapLayoutManager confused "width" and "height" 

[v1.1.1p6f]
 - Bugfix: Memory leak in FlapDockStation/ButtonContent, found by Q_LeSoc

[v1.1.1p7]
 - API: The DisablingStrategy allows to globally disable items like actions or titles
 - API: All DockActions can now be disabled by the DisablingStrategy
 ! API: AbstractDockTitle has a new method "setDisabled", it is used to support the DisablingStrategy
 ! API: All tabs can now be disabled by the DisablingStrategy
 - API: SplitDockStation and FlapDockStation will react on the DisablingStrategy as well
 - API: CDockable has a new method "setEnabled" with which parts of the Dockable can be stopped

[v1.1.1p7a]
 - Bugfix: OverpaintablePanel now correctly implements getMinimum/Preferred/MaximumSize.
 - Bugfix: RootMenuPiece unbinds itself now with some delay, allowing the attached ActionListeners to complete their work
   
[Todo]
- Drop StackDockStation over Dockable and merge them