@@ -80,13 +80,23 @@ public class Leaf extends VisibleSplitNode{
     
     @Override
     public Dimension getMinimumSize() {
+    	SplitDockStation station = getStation();
+    	Dimension minimum;
+    	if( station == null ){
+    		minimum = new Dimension( 0, 0 );
+    	}
+    	else{
+    		minimum = station.getMinimumLeafSize();
+    	}
+    	
     	if( handle == null )
-    		return new Dimension( 0, 0 );
+    		return minimum;
     	
     	DockableDisplayer displayer = handle.getDisplayer();
     	if( displayer == null )
-    		return new Dimension( 0, 0 );
-    	return displayer.getComponent().getMinimumSize();
+    		return minimum;
+    	Dimension result = displayer.getComponent().getMinimumSize();
+    	return new Dimension( Math.max( result.width, minimum.width ), Math.max( result.height, minimum.height ));
     }
     
     @Override
