@@ -104,22 +104,22 @@ public class CombinedStackDockContentPane extends ConfiguredBackgroundPanel{
     
     @Override
     public Dimension getMinimumSize() {
-    	Dimension result = parent.getMinimumSize();
-    	switch( parent.getDockTabPlacement() ){
-    		case TOP_OF_DOCKABLE:
-    		case BOTTOM_OF_DOCKABLE:
-    			result.width = 1;
-    			break;
-    		case LEFT_OF_DOCKABLE:
-    		case RIGHT_OF_DOCKABLE:
-    			result.height = 1;
-    			break;
-    	}
+    	Dimension result = new Dimension( 5, 5 );
     	
     	for( Dockable dockable : parent.getDockables() ){
     		Dimension size = dockable.getComponent().getMinimumSize();
     		result.width = Math.max( result.width, size.width );
     		result.height = Math.max( result.height, size.height );
+    	}
+    	
+    	Dimension parentSize = parent.getMinimumSize();
+    	if( parent.getDockTabPlacement().isHorizontal() ){
+    		result.width = 1;
+    		result.height += parentSize.height;
+    	}
+    	else{
+			result.height = 1;
+			result.width += parentSize.width;
     	}
     	return result;
     }
